Time: 2 ms (83.75%), Space: 44.9 MB (11.61%) - LeetHub